// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio grouped networks should apply ledger import 1`] = `
<DocumentFragment>
  <div
    class="-mx-8 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 py-4 px-8 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mt-0 sm:mb-6 sm:border-b-0 sm:bg-transparent sm:py-0 sm:px-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span>
                <div
                  class="group"
                >
                  <button
                    class="ring-focus css-1wz6bm9"
                  >
                    <div
                      class="flex h-5 w-5 items-center justify-center"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sliders-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
            type="vertical"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <button
            class="css-1oyl9hh"
            data-testid="WalletControls__import-ledger"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
                <span
                  class="hidden lg:inline"
                >
                  Import Ledger
                </span>
              </div>
            </div>
          </button>
          <button
            class="css-1jhy6v9"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-turn-down-bracket.svg
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="css-1bx0hyc"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span
                class="-mx-1 flex items-center py-3 px-5 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="css-1xhm62p"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-xfxopm"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK
            </h1>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span>
                  <span
                    class="flex max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-4"
              >
                <span>
                  <span
                    class="flex max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-3.5 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 110px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex"
            css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 60px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 140px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-4"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 h-3.5 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 110px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100"
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <div
            class="css-16yt50s"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1xhm62p"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-xfxopm"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="absolute -right-2 -bottom-2 h-6 w-6 rounded-full bg-theme-background sm:hidden"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK Devnet
            </h1>
            <div
              class="hidden sm:inline-flex"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span>
                  <span
                    class="flex max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <span
                class="text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex"
            css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 60px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 140px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <span
                  class="text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  N/A
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100"
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <div
            class="css-16yt50s"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks should render list 1`] = `
<DocumentFragment>
  <div
    class="-mx-8 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 py-4 px-8 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mt-0 sm:mb-6 sm:border-b-0 sm:bg-transparent sm:py-0 sm:px-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span>
                <div
                  class="group"
                >
                  <button
                    class="ring-focus css-1wz6bm9"
                  >
                    <div
                      class="flex h-5 w-5 items-center justify-center"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sliders-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
            type="vertical"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <button
            class="css-1oyl9hh"
            data-testid="WalletControls__import-ledger"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
                <span
                  class="hidden lg:inline"
                >
                  Import Ledger
                </span>
              </div>
            </div>
          </button>
          <button
            class="css-1jhy6v9"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-turn-down-bracket.svg
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="css-1bx0hyc"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span
                class="-mx-1 flex items-center py-3 px-5 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="css-1xhm62p"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-xfxopm"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK
            </h1>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span>
                  <span
                    class="flex max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-4"
              >
                <span>
                  <span
                    class="flex max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-3.5 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 110px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex"
            css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 60px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 140px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-4"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 h-3.5 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 110px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100"
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <div
            class="css-16yt50s"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1xhm62p"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-xfxopm"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
            <div
              class="absolute -right-2 -bottom-2 h-6 w-6 rounded-full bg-theme-background sm:hidden"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK Devnet
            </h1>
            <div
              class="hidden sm:inline-flex"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span>
                  <span
                    class="flex max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <span
                class="text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex"
            css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 60px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 140px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <span
                  class="text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  N/A
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100"
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <div
            class="css-16yt50s"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks should render without testnet wallets 1`] = `
<DocumentFragment>
  <div
    class="-mx-8 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 py-4 px-8 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mt-0 sm:mb-6 sm:border-b-0 sm:bg-transparent sm:py-0 sm:px-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span>
                <div
                  class="group"
                >
                  <button
                    class="ring-focus css-1wz6bm9"
                  >
                    <div
                      class="flex h-5 w-5 items-center justify-center"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sliders-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
            type="vertical"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <button
            class="css-1oyl9hh"
            data-testid="WalletControls__import-ledger"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
                <span
                  class="hidden lg:inline"
                >
                  Import Ledger
                </span>
              </div>
            </div>
          </button>
          <button
            class="css-1jhy6v9"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-turn-down-bracket.svg
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="css-1bx0hyc"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <span
                class="-mx-1 flex items-center py-3 px-5 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    plus.svg
                  </svg>
                </div>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="css-1xhm62p"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 py-6 px-8 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-xfxopm"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK
            </h1>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span>
                  <span
                    class="flex max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-4"
              >
                <span>
                  <span
                    class="flex max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-3.5 css-1eg0sfo-skeletonStyles-Skeleton"
                      style="width: 110px;"
                    >
                      ‌
                    </span>
                    ‌
                  </span>
                </span>
              </div>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex"
            css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 60px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 h-4 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 140px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-4"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton sm:h-4.5 h-3.5 css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 110px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100"
          css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
        >
          <div
            class="css-16yt50s"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
